# p4est

./: .gitignore  .gitmodules  BUILDNUMBER.in  build_requirements.txt  meson.build  meson_options.txt  pyproject.toml
docs/: genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_modules/: index.html
docs/_modules/p4est/: geom.html  utils.html
docs/_modules/p4est/mesh/hex/: amr.html  base.html  geom.html  info.html  prim.html  topo.html
docs/_modules/p4est/mesh/quad/: amr.html  base.html  geom.html  info.html  prim.html  topo.html
docs/_sources/api/: core.rst.txt  geom.rst.txt  hex.prim.rst.txt  quad.base.rst.txt
docs/_static/: pygments.css
docs/api/: core.html  geom.html  hex.amr.html  hex.base.html  hex.prim.html  index.html  quad.amr.html  quad.base.html  quad.prim.html  typing.html  utils.html
example/simple/: plot_earth.py  requirements.txt  simple2.py  simple3.py
pkgaux/: __init__.py
pypkg/doc/: __main__.py  conf.py  index.rst
pypkg/doc/api/: amr.hex.rst  amr.quad.rst  core.rst  hex.amr.rst  hex.base.rst  index.rst  mesh.hex.rst  mesh.quad.rst  mesh.rst  quad.amr.rst  quad.prim.rst  typing.rst  utils.rst
pypkg/p4est/: __init__.py  geom.py  typing.py  utils.py
pypkg/p4est/amr/: __init__.py
pypkg/p4est/amr/hex/: __init__.py  base.py
pypkg/p4est/amr/quad/: __init__.py  base.py
pypkg/p4est/core/: __init__.py  _adapted.pxd  _adapted.pyx  _info.pxd  _info.pyx  _leaf_info.pxd  _leaf_info.pyx  _p4est.pxd  _p4est.pyx  _p8est.pxd  _p8est.pyx  _sc.pxd  _sc.pyx  _utils.pxd  _utils.pyx  meson.build
pypkg/p4est/mesh/: __init__.py  hex.py  info.py  quad.py  quad_mesh.py
pypkg/p4est/mesh/hex/: __init__.py  amr.py  base.py  geom.py  info.py  mesh.py  prim.py  topo.py  typing.py
pypkg/p4est/mesh/quad/: __init__.py  amr.py  base.py  geom.py  info.py  mesh.py  prim.py  topo.py  typing.py
src/: meson.build  p4est.h  p4est_config.h.in
srcpy/: __init__.py
srcpy/core/: __init__.py  _p4est.pxd  _p4est.pyx  meson.build
srcpy/mesh/: __init__.py  quad_mesh.py  utils.py
